# goldfish

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: tests.yml
notebooks/: Makefile  basic_commands.ipynb  requirements.in  requirements.txt  run.py
src/: command.rs  handler.rs  lib.rs  main.rs  parser.rs  settings.rs  shutdown.rs  state.rs  utils.rs
src/handler/: get.rs  handler.rs  mod.rs  set.rs  version.rs
src/parser/: command.rs  get.rs  mod.rs  parser.rs  quit.rs  response.rs  set.rs  version.rs
v2/: Cargo.toml  README.md
v3/: README.md  protocol_summary.md
v3/src/: lib.rs  main.rs  settings.rs  state.rs
v3/src/handler/: get.rs  main_handler.rs  mod.rs  set.rs  version.rs
v3/src/parser/: command.rs  get.rs  main_parser.rs  mod.rs  parser.rs  quit.rs  response.rs  set.rs  version.rs
v3/tests/: test_get_set.rs  test_version.rs
