[package]
name = "goldfish"
version = "0.1.0"
authors = ["Huseyin Yilmaz <yilmazhuseyin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.9", features = ["attributes"]}

nom = "6.1.2"
